# jupyterlab-khulnasoft

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  install.json  overrides.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  check-release.yml
jupyterlab_khulnasoft/: __init__.py
python_packages/jupyter_khulnasoft/: MANIFEST.in  README.md  setup.cfg  setup.py
python_packages/jupyter_khulnasoft/jupyter_khulnasoft/: README.md  __init__.py  _version.py  constants.py  handlers.py  locator.py  onboarding.py
python_packages/jupyter_khulnasoft/jupyter_khulnasoft/etc/: jupyter-khulnasoft-serverextension.json
python_packages/jupyter_khulnasoft/jupyter_khulnasoft/schema/: schema.json
python_packages/jupyter_khulnasoft/jupyter_khulnasoft/specs/: __init__.py  khulnasoftls.py  utils.py
python_packages/jupyter_khulnasoft/jupyter_khulnasoft/tests/: conftest.py  test_bad_spec.py  test_extension.py  test_listener.py
python_packages/jupyterlab_khulnasoft/: MANIFEST.in  README.md  setup.cfg  setup.py
python_packages/jupyterlab_khulnasoft/jupyterlab_khulnasoft/: __init__.py  _paths.py  install.json
schema/: inline-provider.json
src/: config.ts  index.ts  khulnasoft.ts  provider.ts
src/api/proto/exa/khulnasoft_common_pb/: khulnasoft_common_pb.ts
src/api/proto/exa/language_server_pb/: language_server_pb.ts
