[metadata]
name = jupyter-khulnasoft
description = Multi-Language Server WebSocket proxy for JupyterLab server.
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/khulnasoftco/jupyterlab-khulnasoft
author = Khulnasoft
author_email = support@khulnasoft.com
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    tornado >=5.1.0
    jupyter_server >=1.1.2
    entrypoints

[options.entry_points]
jupyter_khulnasoft_spec_v1 =
    khulnasoftls = jupyter_khulnasoft.specs:khulnasoft

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_khulnasoft
    --cov jupyter_khulnasoft
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8